--- a/.env
+++ b/.env
@@ -1,4 +1,11 @@
 USER = sashank99narayan@gmail.com
 PASS = tauvozkdtqbkqycf
 SERVICE = gmail
-HOST = http://localhost:8080/api/v1/
+DB_HOST = bfckkvc7ukodqlejszef-mysql.services.clever-cloud.com
+DB_USER = u8fj6xfx6lwplxbo
+DB_PASS = ROK1w0rE2vKQH60HxlCk
+DB_NAME = bfckkvc7ukodqlejszef
+HOST = https://travel-repo.onrender.com/api/v1
+ADMIN_KEY = admin 
+PROPERTY_OWNER_KEY = property 
+TRAVELLER_KEY = traveller 
