--- a/.env
+++ b/.env
@@ -6,6 +6,11 @@ DB_USER = u8fj6xfx6lwplxbo
 DB_PASS = ROK1w0rE2vKQH60HxlCk
 DB_NAME = bfckkvc7ukodqlejszef
 HOST = https://travel-repo.onrender.com/api/v1/
-ADMIN_KEY = admin 
-PROPERTY_OWNER_KEY = property 
-TRAVELLER_KEY = traveller 
+HOST_LOCAL = http://localhost:8080/api/v1/
+DB_USER_LOCAL = root
+DB_PASS_LOCAL = Password@123
+DB_NAME_LOCAL = traveldb
+DB_HOST_LOCAL = localhost
+ADMIN_KEY = admin
+PROPERTY_OWNER_KEY = property
+TRAVELLER_KEY = traveller
